// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  height: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Officia sed corrupti laboriosam voluptatem iste. Sed harum reprehenderit tempore optio. Cum laudantium est sequi natus quae ea et. Distinctio recusandae quo mollitia est reiciendis sunt. Fuga quod non eaque sequi voluptas. Occaecati quia consequatur.
 
Ut sed aut assumenda quo. Sed unde repellendus. Quam est est non odit architecto omnis ad quas. Ipsam voluptas repudiandae animi nihil fugiat omnis eveniet et aut. Repellat qui eos veniam quasi aut architecto et. Sed ut eius.
 
Voluptas eum nobis recusandae. Nostrum ut quis ex quos aliquam. Voluptates mollitia est.
 
Consequatur praesentium aperiam. Nobis doloremque optio rerum vero. Quam sit dolor quibusdam quo quia accusantium nemo aspernatur. At reiciendis nihil cupiditate deleniti tenetur qui necessitatibus rerum sint. Quis sit impedit in blanditiis ut. Quod doloribus perspiciatis est minus suscipit animi.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget editable header 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c6:first-child {
  margin-top: 0;
}

.c6:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: transparent;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
  position: absolute;
  right: 2.5em;
  top: 1.53125em;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c5:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c5 .c8 {
  font-size: 1.5em;
}

.c2 {
  height: 40px;
}

.c7 .c4 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Edit me
        <button
          className="c4 c5"
          onClick={[Function]}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </button>
      </h1>
    </div>
    <p
      className="c6"
    >
      Ad at omnis delectus amet qui. Et amet qui rerum enim quos. Delectus quisquam facilis reiciendis atque eligendi delectus. Qui quia harum quia distinctio.
 
Sint inventore molestiae quos veritatis laudantium. Aut perferendis aliquam. Reprehenderit doloribus labore voluptatibus nobis qui doloribus sunt dolor voluptatem. Ratione incidunt dolorum inventore hic eos distinctio recusandae et. Nisi nostrum quas rerum harum pariatur qui iusto molestiae totam. Et provident nesciunt voluptas perferendis aspernatur ut quod perferendis.
 
Ea omnis quia quia voluptatem dolor quasi ratione. Et delectus nostrum consequatur adipisci. Dicta laboriosam accusamus sit dicta facilis nobis rerum.
 
Aut saepe iste qui. Odio eos recusandae laboriosam vel accusantium consequatur et explicabo aut. Accusamus voluptas libero velit consequatur fuga.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.25em 0 0 1.25em;
  height: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Amet modi non est esse ut et numquam recusandae mollitia. Ea eos repudiandae a. A recusandae eaque et inventore nostrum consequatur et enim.
 
Voluptate exercitationem qui. Rerum tenetur nam voluptatum sit. Qui quas qui facilis itaque. Nihil possimus odio.
 
Nulla perferendis necessitatibus vel eum rerum dignissimos in aut. Tempora explicabo ut perspiciatis veniam ducimus et est necessitatibus perspiciatis. Eligendi sequi assumenda aut quis harum ea non natus nisi. Nesciunt totam dignissimos dolores vitae ut dolorem amet velit deserunt. Assumenda sunt quam officiis eos et quos et. Aperiam sed sint facilis eos consequuntur.
 
Aut voluptatem magnam ut modi dolorem quae saepe aut. Quos dicta quae aliquam minima ea rerum facilis exercitationem minima. Suscipit deserunt quos vel enim. Corrupti dolores perspiciatis harum consequatur aliquid nisi quis. Dolores neque itaque sed aut. Itaque eos amet fugiat recusandae ex itaque quas.
    </p>
  </div>
</div>
`;
